@startuml

title __REPO's Class Diagram__\n

  package  {
    package component {
      interface ColourTool {
      }
    }
  }
  

  package  {
    class DecimalOutOfRangeException {
    }
  }
  

  package  {
    package component {
      interface DrawComponent {
      }
    }
  }
  

  package  {
    package component {
      class Eclipse {
      }
    }
  }
  

  package  {
    package component {
      class Fill {
      }
    }
  }
  

  package  {
    package component {
      class Line {
      }
    }
  }
  

  package  {
    package component {
      class Pen {
      }
    }
  }
  

  package  {
    package component {
      class Plot {
      }
    }
  }
  

  package  {
    class VectorPoint {
    }
  }
  

  package  {
    package component {
      class Polygon {
      }
    }
  }
  

  package  {
    package component {
      class Rectangle {
      }
    }
  }
  

  package  {
    package component {
      abstract class Shape {
      }
    }
  }
  

  Eclipse -up-|> Shape
  Fill -up-|> ColourTool
  Line -up-|> Shape
  Pen -up-|> ColourTool
  Plot -up-|> DrawComponent
  Polygon -up-|> DrawComponent
  Rectangle -up-|> Shape
  Shape -up-|> DrawComponent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
